# AirQualityMonitor

./: .gitignore  CMakeLists.txt  README.md  huge_app.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32c6  sdkconfig.esp32c6 2.old  sdkconfig.esp32c6.old  sdkconfig.seeed_xiao_esp32_c6  sdkconfig.seeed_xiao_esp32_c6.old
binaries/: README.md
components/DHT20/: .piopm  DHT20.cpp  DHT20.h  library.json
components/DHT20/examples/DHT20/: DHT20.ino
components/DHT20/examples/DHT20_I2C_speed/: DHT20_I2C_speed.ino
components/SensirionCore/: .piopm
components/Timezone/: .piopm
lib/Adafruit EPD/: .piopm  library.json
lib/Adafruit EPD/src/: Adafruit_EPD.h  Adafruit_ThinkInk.h
lib/Max31328RTC/: .piopm
lib/Max31328RTC/src/: max31328.cpp
main/: buttons.cpp  buttons.h  main.cpp  matter_air_quality_sensor.cpp  matter_air_quality_sensor.h  screen.cpp  screen.h  sense.cpp  sense.h  utils.cpp  utils.h  web_portal.h  wifi_manager.cpp
main/myBitmap/: bitmaps.h
main/myFont/: RubikItalic49pt7b.h  RubikItalic64pt7b.h  RubikRegular15pt7b.h  RubikRegular17pt7b.h  RubikRegular6pt7b.h
src/: CMakeLists.txt  battery.cpp  battery.h  buttons.cpp  buttons.h  idf_component.yml  main.cpp  screen.cpp  screen.h  sense.cpp  sense.h  time_manager.cpp  time_manager.h  utils.cpp  utils.h  web_portal.cpp  web_portal.h  wifi_manager.cpp  wifi_manager.h
src/myBitmap/: bitmaps.h
src/myFont/: RubikItalic9pt7b.h  RubikMedium12pt7b.h  RubikRegular12pt7b.h  RubikRegular18pt7b.h  RubikRegular9pt7b 2.h
temp/: time_manager.cpp  web_portal.cpp  wifi_manager.h
tmp/: screen.cpp  screen.h
(+7 files in other folders)
